[808] Add job for rcptt tests
bug: 808 

Change-Id: I5ee7c956208da4f1b3b09d516e1503d756f824da
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>