@@ -61,8 +61,8 @@ This file was generated by Eclipse EGF
     <condition property="jacoco-report" value="${env.jacoco-report}">
         <isset property="env.jacoco-report" />
     </condition>
-    <condition property="test-locations" value="${env.test-locations}">
-        <isset property="env.test-locations" />
+    <condition property="test-location" value="${env.test-location}">
+        <isset property="env.test-location" />
     </condition>
 
     <property file="build.properties" />
@@ -117,7 +117,7 @@ This file was generated by Eclipse EGF
 	                <jvmarg value="-Djunit-report=${junit-report}"/>
 	                <jvmarg value="-Dhtml-report=${html-report}"/>
 	                <jvmarg value="-Djacoco-report=${jacoco-report}"/>
-	                <jvmarg value="-Dtest-locations=${test-locations}"/>
+	                <jvmarg value="-Dtest-location=${test-location}"/>
                     <arg value="-data" />
                     <arg value="@{workspace}" />
                 <args />
@@ -298,7 +298,7 @@ This file was generated by Eclipse EGF
 		<echo message="Provided $${junit-report} : ${junit-report}" />
 		<echo message="Provided $${html-report} : ${html-report}" />
 		<echo message="Provided $${jacoco-report} : ${jacoco-report}" />
-		<echo message="Provided $${test-locations} : ${test-locations}" />
+		<echo message="Provided $${test-location} : ${test-location}" />
 	</target>
 
     <target name="init.build.properties">
@@ -321,7 +321,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,Install_RCPTT,download_TP,import_tests_projects,Resource_Reuse,run" />
+	<target name="all" depends="CleanStep_1,Install_RCPTT,download_TP,run,import_tests_projects,Resource_Reuse" />
 	<target name="import_tests_projects" depends="import_tests_projects_BuildStep_1" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
@@ -429,7 +429,7 @@ This file was generated by Eclipse EGF
 	</target>
 
 <target name="test">
-		<java jar="${runner-path}/plugins/org.eclipse.equinox.launcher_1.3.100.v20150511-1540.jar" fork="true">
+		<java jar="${tools}/rcptt/eclipse/plugins/org.eclipse.equinox.launcher_1.3.100.v20150511-1540.jar" fork="true">
 			<arg value="-application" />      
 			<arg value="org.eclipse.rcptt.runner.headless" />
 
@@ -457,9 +457,9 @@ This file was generated by Eclipse EGF
 			<arg value="-testOptions" />      
 			<arg value="testExecTimeout=300;execTimeout=3600" />
 			
-<!--			<arg value="-autVMArgs" />      
-			<arg value="-Xmx1024m;-XX:MaxPermSize=256m;-javaagent:${jacoco-path}/lib/jacocoagent.jar=destfile=${jacoco-report}" />
--->
+			<arg value="-autVMArgs" />      
+			<arg value="-Dosgi.requiredJavaVersion=1.7;-Dorg.eclipse.swt.browser.DefaultType=mozilla;-Xms1000m;-Xmx3000m;-XX:PermSize=128m;-XX:MaxPermSize=512m" />
+
 		</java>
 	</target>
 
